// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[archer] 1`] = `
{
  "accRating": 80.925,
  "accuracyPct": 35,
  "allStatTotal": 263,
  "atk": 78,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 8.6,
  "critMult": 1.5550299513149461,
  "critResistPct": 1.5,
  "def": 10,
  "dexStat": 148,
  "evaRating": 76.5,
  "evasionPct": 75,
  "extraAttackChancePct": 68.3,
  "healMult": 1.1500000000000001,
  "hp": 670,
  "intStat": 15,
  "lukStat": 55,
  "magicAtk": 11,
  "magicDef": 14,
  "magicMinDamage": 3,
  "maxHp": 670,
  "maxMp": 227,
  "minDamage": 3,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 136.6,
  "spiStat": 15,
  "strStat": 15,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[lowbie] 1`] = `
{
  "accRating": 35.375,
  "accuracyPct": 35,
  "allStatTotal": 100,
  "atk": 15,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.4604255649461715,
  "critResistPct": 1.5,
  "def": 10,
  "dexStat": 15,
  "evaRating": 0,
  "evasionPct": 0,
  "extraAttackChancePct": 7.125,
  "healMult": 1.1500000000000001,
  "hp": 220,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 11,
  "magicDef": 14,
  "magicMinDamage": 3,
  "maxHp": 220,
  "maxMp": 92,
  "minDamage": 4,
  "mp": 92,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 14.25,
  "spiStat": 15,
  "strStat": 25,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[mage] 1`] = `
{
  "accRating": 49.925,
  "accuracyPct": 35,
  "allStatTotal": 253,
  "atk": 11,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.45280302180028,
  "critResistPct": 4.5,
  "def": 10,
  "dexStat": 15,
  "displayAttack": "magic",
  "evaRating": 0,
  "evasionPct": 0,
  "extraAttackChancePct": 7.125,
  "healMult": 1.33,
  "hp": 670,
  "intStat": 148,
  "lukStat": 15,
  "magicAtk": 71,
  "magicDef": 43,
  "magicMinDamage": 25,
  "maxHp": 670,
  "maxMp": 501,
  "minDamage": 3,
  "mp": 501,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 14.25,
  "spiStat": 45,
  "strStat": 15,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[ninja] 1`] = `
{
  "accRating": 50.125,
  "accuracyPct": 35,
  "allStatTotal": 255,
  "atk": 31,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 16.2,
  "critMult": 1.7329671756295133,
  "critResistPct": 1.5,
  "def": 10,
  "dexStat": 60,
  "evaRating": 52.5,
  "evasionPct": 52.5,
  "extraAttackChancePct": 28.5,
  "healMult": 1.1500000000000001,
  "hp": 670,
  "intStat": 15,
  "lukStat": 135,
  "magicAtk": 11,
  "magicDef": 14,
  "magicMinDamage": 3,
  "maxHp": 670,
  "maxMp": 227,
  "minDamage": 3,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 57,
  "spiStat": 15,
  "strStat": 15,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[tank] 1`] = `
{
  "accRating": 37.375,
  "accuracyPct": 35,
  "allStatTotal": 275,
  "atk": 37,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.4755190439471157,
  "critResistPct": 1.5,
  "def": 72,
  "dexStat": 15,
  "evaRating": 0,
  "evasionPct": 0,
  "extraAttackChancePct": 4.625,
  "healMult": 1.7700000000000002,
  "hp": 1175,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 11,
  "magicDef": 14,
  "magicMinDamage": 3,
  "maxHp": 1175,
  "maxMp": 227,
  "minDamage": 15,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 9.25,
  "spiStat": 15,
  "strStat": 45,
  "vitStat": 170,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[warrior] 1`] = `
{
  "accRating": 47.675,
  "accuracyPct": 35,
  "allStatTotal": 263,
  "atk": 81,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.5501420281376743,
  "critResistPct": 1.5,
  "def": 32,
  "dexStat": 15,
  "evaRating": 0,
  "evasionPct": 0,
  "extraAttackChancePct": 1.625,
  "healMult": 1.31,
  "hp": 830,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 11,
  "magicDef": 14,
  "magicMinDamage": 3,
  "maxHp": 830,
  "maxMp": 227,
  "minDamage": 24,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 3.25,
  "spiStat": 15,
  "strStat": 148,
  "vitStat": 55,
}
`;

exports[`골든: resolveBattle PvE 지문 (엔진 가드) > PvE 지문 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "warrior_vs_들개",
    "logSha": "60ddb2f7a6f9f0a5cdcc305772c468c441a3d372",
    "outcome": "win",
    "playerHp": 827,
    "playerMp": 227,
    "turns": 7,
  },
  {
    "enemyHp": 0,
    "label": "warrior_vs_골렘",
    "logSha": "bce6e0ae7b80fe043170a023aa035cb2bc0a00c8",
    "outcome": "win",
    "playerHp": 818,
    "playerMp": 227,
    "turns": 12,
  },
  {
    "enemyHp": 0,
    "label": "ninja_crit_vs_늑대",
    "logSha": "407f6766f301b734f51116291ef3abfc40ada572",
    "outcome": "win",
    "playerHp": 649,
    "playerMp": 227,
    "turns": 45,
  },
  {
    "enemyHp": 0,
    "label": "archer_pen_vs_골렘",
    "logSha": "599411e5bfdbbc55233baf92bc9d40feb45670dd",
    "outcome": "win",
    "playerHp": 669,
    "playerMp": 227,
    "turns": 13,
  },
  {
    "enemyHp": 0,
    "label": "magic_vs_약탈자",
    "logSha": "1626ef9590387049294453748ca4abaa6af44f57",
    "outcome": "win",
    "playerHp": 574,
    "playerMp": 501,
    "turns": 23,
  },
  {
    "enemyHp": 0,
    "label": "counter_tank_vs_들소",
    "logSha": "33acb697dc8b254b95d3d66b8a3f90b3857e0fcc",
    "outcome": "win",
    "playerHp": 977,
    "playerMp": 227,
    "turns": 42,
  },
  {
    "enemyHp": 0,
    "label": "heal_vs_들소_boss",
    "logSha": "d4e3c22832c1fd249c0add56dc444702ac54cc81",
    "outcome": "win",
    "playerHp": 1153,
    "playerMp": 227,
    "turns": 71,
  },
  {
    "enemyHp": 0,
    "label": "mage_skills_vs_골렘",
    "logSha": "1b3070cbf2ee3e8ea4b7e8c031a9d521bc58e6e0",
    "outcome": "win",
    "playerHp": 657,
    "playerMp": 501,
    "turns": 10,
  },
  {
    "enemyHp": 0,
    "label": "lowbie_vs_들개",
    "logSha": "d41da199ab4694f1491e394612edba703b8991a3",
    "outcome": "win",
    "playerHp": 214,
    "playerMp": 92,
    "turns": 14,
  },
]
`;

exports[`골든: resolveBattlePvP 지문 (PvP 엔진 가드) > PvP 지문 매트릭스 1`] = `
[
  {
    "label": "warrior_vs_mage",
    "logSha": "fe89382bd388ede7a2a8325ba7b54e99c3e6471a",
    "outcome": "p1_win",
    "turns": 49,
  },
  {
    "label": "archer_vs_ninja",
    "logSha": "2bce203486a6692d9c0ee68cf25c470d627e2fb3",
    "outcome": "p1_win",
    "turns": 80,
  },
  {
    "label": "tank_vs_warrior",
    "logSha": "c75d4564e9e9dd05ced614c8ae75044d76085c35",
    "outcome": "p2_win",
    "turns": 205,
  },
]
`;

exports[`골든: 적 페이즈 메커닉 커버리지 (리팩터 가드) > 적 페이즈 메커닉 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "enemy_dot_tick",
    "logSha": "4166d61f13fe71c8452ff9a1701d86828127751d",
    "outcome": "win",
    "playerHp": 818,
    "playerMp": 227,
    "turns": 14,
  },
  {
    "enemyHp": 0,
    "label": "chill_enemy",
    "logSha": "614f2e301da86b742a822f6b3a18d149bccb5057",
    "outcome": "win",
    "playerHp": 995,
    "playerMp": 227,
    "turns": 31,
  },
  {
    "enemyHp": 0,
    "label": "thorns_reflect",
    "logSha": "58129b05d97be76e9d4b342220906acdd7f902af",
    "outcome": "win",
    "playerHp": 1140,
    "playerMp": 227,
    "turns": 36,
  },
  {
    "enemyHp": 0,
    "label": "evade_reflect",
    "logSha": "a99c2548d9f157eb54d17532ca0f3d93a4e8dd3b",
    "outcome": "win",
    "playerHp": 644,
    "playerMp": 227,
    "turns": 89,
  },
  {
    "enemyHp": 0,
    "label": "enrage_enemy",
    "logSha": "cd9e05dd213a09bc03c680c6a814e4c629fb5530",
    "outcome": "win",
    "playerHp": 796,
    "playerMp": 227,
    "turns": 16,
  },
  {
    "enemyHp": 0,
    "label": "brace_enemy",
    "logSha": "37d899a54a6e999c1412a76b23a01dcb258ccdd9",
    "outcome": "win",
    "playerHp": 818,
    "playerMp": 227,
    "turns": 13,
  },
  {
    "enemyHp": 0,
    "label": "heavyblow_enemy",
    "logSha": "1ab9f2507a38890108e66c9909cdc2d9a9974f7a",
    "outcome": "win",
    "playerHp": 779,
    "playerMp": 227,
    "turns": 57,
  },
]
`;
